--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 subprojects {
-    apply plugin: 'groovy'
+    apply plugin: 'java'
 
     version = '1.0.0-SNAPSHOT'
     group = 'devslp.design.patterns'
@@ -11,10 +11,7 @@ subprojects {
     }
 
     dependencies {
-        compile 'org.codehaus.groovy:groovy-all:2.4.6'
-
         testCompile 'junit:junit:4.12'
-        testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     }
 }
 
