--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 //Creational
-include 'Singleton'
-
-//include 'AbstractFactory', 'FactoryMethod', 'Builder', 'Singleton', 'Prototype', 'ObjectPool'
+//include 'Singleton', 'AbstractFactory', 'FactoryMethod', 'Builder', 'Singleton', 'Prototype', 'ObjectPool'
 
 //Behavioral
 //include 'Mediator', 'Iterator', 'Observer', 'TemplateMethod', 'Strategy', 'State', 'ChainOfResponsability', 'Visitor', "Interpreter"
+include 'Interpreter'
+
 
 //Structural
 //include 'Adapter', 'Proxy', 'Facade', 'Composite', 'Decorator'
