--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ subprojects {
 
     dependencies {
         testCompile 'junit:junit:4.12'
+        testCompile "org.mockito:mockito-core:1.+"
     }
 }
 
